# riptide

./: .editorconfig  .gitignore  .gitmodules  CLAUDE.md  CLAUDE.original.md  Cargo.toml  MIGRATION.md  PERFORMANCE.md  TESTING.md  TIDE_INTEGRATION.md  WASM.md  electron-builder.yml  package.json  pnpm-lock.yaml  riptide.cap  riptide.sidecar.json  tsconfig.renderer.json  tsconfig.solid.json
.claude/agents/: gpu-code-reviewer.md
.claude/worktrees/: tide  tide-vcd
.github/workflows/: release.yml
apps/desktop/: package.json  tsconfig.json
crates/riptide-contract/: Cargo.toml
crates/riptide-core/: Cargo.toml
crates/riptide-render/: Cargo.toml
crates/riptide-render/shaders/: digital.wgsl  labels.wgsl  lines.wgsl  rect.wgsl  text.wgsl
crates/riptide-render/src/: capture.rs  colors.rs  device.rs  digital.rs  frame.rs  labels.rs  lib.rs  lines.rs  rect.rs  scene.rs  text.rs  timing.rs
crates/riptide-render/tests/: digital_render.rs  lines_rect.rs  text_labels.rs  u12.rs
dist-tauri/: index.html
docs/: drag-reorder.md  sidecar.md  sidecar.schema.json
native/: build.zig  build.zig.zon
native/scripts/: gen_mock_vcd.py
native/src/: hier.zig  label.zig  label_fixture.zig  main.zig  mock.vcd  mock.vcd.sidecar.json  mock_db.zig  mock_scene.zig  oracle_test.zig  pack.zig  query_fixture.zig  segments.zig  test_equiv.zig  win_napi_shim.c
samples/: README.md  empty.vcd  single-edge.vcd  unsupported-types.vcd
scripts/: build-ui.mjs  build.mjs  check.mjs  dev-solid.mjs  dev-ui.mjs  dev.mjs  dump-hier.cjs  esbuild-react-compiler.mjs  esbuild-solid.mjs  esbuild-tailwind.mjs  gen-win-napi-shim.mjs  screenshot.cjs  solid-main.cjs  test.mjs  wgsl-check.mjs
scripts/canvas-test/: build.mjs  harness.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands_doc.rs  commands_files.rs  events.rs  main.rs  perf.rs  render_loop.rs  state.rs  surface.rs
tests/: FINDINGS.md  README.md  differential.test.cjs  format.test.cjs  gate-split.verify.cjs  malformed.test.cjs  native.test.cjs  run.sh
tools/: render-mock-svg.mjs
(+150 files in other folders)
